# banana-engine

./: .gitignore  CMakeLists.txt  banana_engine.cpp  glad.c  main.cpp  sdl-example.cpp  shader.h
Shaders/: shader.frag  shader.vertex  shader2.frag
include/glad/: glad.h
